src/integration/snapshots/rustclean__integration__screens__theme-treemap-none-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (diskte)  │  17 dosya  │  sıralama: boyut
┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌───────────────────────────────────┐┌────────────────────┐
┃Downloads/                             ┃│Movies/                            ││Projects/           │
┃3.6 GiB · %41.2                        ┃│3.2 GiB · %36.7                    ││1.1 GiB · %12.8     │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   ││                    │
┃                                       ┃│                                   │└────────────────────┘
┃                                       ┃│                                   │┌────────────────┐┌──┐
┃                                       ┃│                                   ││Library/        ││A…│
┃                                       ┃│                                   ││665.0 MiB · %7.5││1…│
┃                                       ┃│                                   ││                ││  │
┃                                       ┃│                                   ││                ││  │
┃                                       ┃│                                   ││                ││  │
┃                                       ┃│                                   ││                ││  │
┃                                       ┃│                                   ││                ││  │
┃                                       ┃│                                   ││                ││  │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────────┘└────────────────┘└──┘
diğer (1 küçük öğe — Enter: listede gör)
 t / Esc  listeye dön   Renk: ████ klasörler (her biri ayrı)  ██ Video  ██ Ses  ██ Resim  ██ Arşiv /
37 öğe tarandı, 1.2 sn   ⚠ 2 öğeye erişilemedi
 ?  yardım   ←↑↓→  blok seç   Enter  gir   ⌫  geri   c  renk   t/Esc  liste   Space  sepete   x  çöp
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 -/- BOLD | REVERSED
 1: 0+41 -/- BOLD
 2: 0+11 -/- BOLD | 40+1 -/- BOLD | 42+7 -/- BOLD | 79+9 -/- BOLD
 3: 0+1 -/- BOLD | 40+1 -/- BOLD
 4: 0+1 -/- BOLD | 40+1 -/- BOLD
 5: 0+1 -/- BOLD | 40+1 -/- BOLD
 6: 0+1 -/- BOLD | 40+1 -/- BOLD
 7: 0+1 -/- BOLD | 40+1 -/- BOLD
 8: 0+1 -/- BOLD | 40+1 -/- BOLD
 9: 0+1 -/- BOLD | 40+1 -/- BOLD
10: 0+1 -/- BOLD | 40+1 -/- BOLD
11: 0+1 -/- BOLD | 40+1 -/- BOLD
12: 0+1 -/- BOLD | 40+1 -/- BOLD
13: 0+1 -/- BOLD | 40+1 -/- BOLD
14: 0+1 -/- BOLD | 40+1 -/- BOLD
15: 0+1 -/- BOLD | 40+1 -/- BOLD
16: 0+1 -/- BOLD | 40+1 -/- BOLD
17: 0+1 -/- BOLD | 40+1 -/- BOLD | 79+8 -/- BOLD | 97+2 -/- BOLD
18: 0+1 -/- BOLD | 40+1 -/- BOLD
19: 0+1 -/- BOLD | 40+1 -/- BOLD
20: 0+1 -/- BOLD | 40+1 -/- BOLD
21: 0+1 -/- BOLD | 40+1 -/- BOLD
22: 0+1 -/- BOLD | 40+1 -/- BOLD
23: 0+1 -/- BOLD | 40+1 -/- BOLD
24: 0+1 -/- BOLD | 40+1 -/- BOLD
25: 0+41 -/- BOLD
26: 0+40 -/- BOLD
27: 0+9 -/- REVERSED | 24+6 -/- BOLD
29: 0+3 -/- REVERSED | 12+6 -/- REVERSED | 29+7 -/- REVERSED | 42+3 -/- REVERSED | 52+3 -/- REVERSED | 62+7 -/- REVERSED | 77+7 -/- REVERSED | 93+3 -/- REVERSED
