src/integration/snapshots/rustclean__integration__screens__tools-android-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Developer tools cleanup  │  reclaimable: 9.1 GiB
────────────────────────────────────────────────────────────────────────────────────────────────────
  Tool                               Reclaimable  Details
  Xcode simulators                        4.0 GiB unavailable devices 0 (0 B) · unused for a year 40
  Xcode archives                        310.0 MiB 5 archives (742.0 MiB) · 2 older than 12 months (3
▶ Android emulators and images            3.0 GiB 1 emulator (23.0 GiB) · 3 system images (5.4 GiB),
  Go module and build cache          —            not installed
  conda packages                        790.0 MiB packages 116.0 MiB · tarballs 674.0 MiB · /opt/con
  Playwright browsers                     1.0 GiB /Users/demo/Library/Caches/ms-playwright








────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Actions ─────────────────────────────────────────────────────────────────────────────────────────┐
│ DATA LOSS  Delete the Pixel 9 Pro XL emulator with its apps and data (23.0 GiB)                  │
│    $ avdmanager delete avd -n Pixel_9_Pro_XL                                                     │
│ re-downloaded  Unused image android-34/google_apis_playstore/arm64-v8a (3.1 GiB)                 │
│    $ /Users/demo/Library/Android/sdk/system-images/android-34/google_apis_playstore/arm64-v8a →  │
│trash                                                                                             │
│Close the emulator first: deleting it also deletes the apps and data in it. Without avdmanager,   │
│its folder and .ini file are moved to the trash. Unused images are moved to the trash; SDK Manager│
│downloads them again.                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Measuring only reads. No command runs without your confirmation.
 ?  help   ↑↓  select   Enter  clean   r  measure again   m  menu   Esc  back   q  quit
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 2+16 White/- BOLD | 37+12 -/- BOLD
 4: 2+14 White/- BOLD | 37+12 -/- BOLD
 5: 0+100 White/Indexed(238) BOLD
 6: 2+25 Gray/- | 37+12 Gray/- | 50+13 Gray/-
 7: 2+14 White/- BOLD | 37+12 -/- BOLD
 8: 2+19 White/- BOLD | 37+12 -/- BOLD
18: 0+1 DarkGray/- | 1+9 White/- BOLD | 10+90 DarkGray/-
19: 0+1 DarkGray/- | 1+11 White/Red BOLD | 12+69 White/- BOLD | 99+1 DarkGray/-
20: 0+1 DarkGray/- | 1+45 Gray/- | 99+1 DarkGray/-
21: 0+1 DarkGray/- | 1+15 Black/Yellow | 16+66 White/- BOLD | 99+1 DarkGray/-
22: 0+1 DarkGray/- | 1+96 Gray/- | 99+1 DarkGray/-
23: 0+1 DarkGray/- | 1+5 Gray/- | 99+1 DarkGray/-
24: 0+1 DarkGray/- | 1+95 Gray/- | 99+1 DarkGray/-
25: 0+1 DarkGray/- | 1+98 Gray/- | 99+1 DarkGray/-
26: 0+1 DarkGray/- | 1+21 Gray/- | 99+1 DarkGray/-
27: 0+100 DarkGray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+4 Black/Gray | 23+7 Black/Gray | 38+3 Black/Gray | 57+3 Black/Gray | 67+5 Black/Gray | 79+3 Black/Gray
