src/integration/snapshots/rustclean__integration__screens__tools-archives-confirm-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Developer tools cleanup  │  reclaimable: 9.1 GiB
────────────────────────────────────────────────────────────────────────────────────────────────────
  Tool                               Reclaimable  Details
  Xcode simulators                        4.0 GiB unavailable devices 0 (0 B) · unused for a year 40
▶ Xcode archives                        310.0 MiB 5 archives (742.0 MiB) · 2 older than 12 months (3
  Android emulators and images            3.0 GiB 1 emulator (23.0 GiB) · 3 system images (5.4 GiB),
  Go module and build cache          —            not installed
  ┌ Xcode archives — confirm ────────────────────────────────────────────────────────────────────┐on
  │                                                                                              │
  │These commands will run in order:                                                             │
  │ DATA LOSS  Move 2 archives older than 12 months to the trash (310.0 MiB)                     │
  │    $ /Users/demo/Library/Developer/Xcode/Archives/2024-09-07/App 07.09.2024, 10.00.xcarchive │
  │→ trash                                                                                       │
  │    $ /Users/demo/Library/Developer/Xcode/Archives/2025-03-17/App 17.03.2025, 16.20.xcarchive │
  │→ trash                                                                                       │
  │                                                                                              │
  │Archives hold the dSYM files needed to symbolicate crash reports of shipped builds. Keep those│
  │of versions still in use.                                                                     │
──│                                                                                              │──
┌ │The selection includes a DATA LOSS action. Type “yes” and press Enter to confirm:             │─┐
│ │ > e█                                                                                         │ │
│ │ Esc: cancel                                                                                  │ │
│t└──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│    $ /Users/demo/Library/Developer/Xcode/Archives/2025-03-17/App 17.03.2025, 16.20.xcarchive →   │
│trash                                                                                             │
│Archives hold the dSYM files needed to symbolicate crash reports of shipped builds. Keep those of │
│versions still in use.                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Measuring only reads. No command runs without your confirmation.
 ?  help   Esc  cancel
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 2+16 White/- BOLD | 37+12 -/- BOLD
 4: 0+100 White/Indexed(238) BOLD
 5: 2+28 White/- BOLD | 37+12 -/- BOLD
 6: 2+25 Gray/- | 37+12 Gray/- | 50+13 Gray/-
 7: 2+1 Red/- | 3+26 White/- BOLD | 29+69 Red/-
 8: 2+1 Red/- | 97+1 Red/-
 9: 2+1 Red/- | 3+33 White/- | 97+1 Red/-
10: 2+1 Red/- | 3+11 White/Red BOLD | 14+62 White/- BOLD | 97+1 Red/-
11: 2+1 Red/- | 3+93 Gray/- | 97+1 Red/-
12: 2+1 Red/- | 3+7 Gray/- | 97+1 Red/-
13: 2+1 Red/- | 3+93 Gray/- | 97+1 Red/-
14: 2+1 Red/- | 3+7 Gray/- | 97+1 Red/-
15: 2+1 Red/- | 97+1 Red/-
16: 2+1 Red/- | 3+94 Yellow/- | 97+1 Red/-
17: 2+1 Red/- | 3+25 Yellow/- | 97+1 Red/-
18: 2+1 Red/- | 97+1 Red/-
19: 0+1 DarkGray/- | 1+1 White/- BOLD | 2+1 Red/- | 3+81 Red/- BOLD | 97+1 Red/- | 98+2 DarkGray/-
20: 0+1 DarkGray/- | 1+1 White/Red BOLD | 2+1 Red/- | 6+2 White/- BOLD | 97+1 Red/- | 99+1 DarkGray/-
21: 0+1 DarkGray/- | 1+1 Gray/- | 2+1 Red/- | 3+12 Gray/- | 97+1 Red/- | 99+1 DarkGray/-
22: 0+1 DarkGray/- | 1+1 Gray/- | 2+96 Red/- | 99+1 DarkGray/-
23: 0+1 DarkGray/- | 1+95 Gray/- | 99+1 DarkGray/-
24: 0+1 DarkGray/- | 1+5 Gray/- | 99+1 DarkGray/-
25: 0+1 DarkGray/- | 1+97 Gray/- | 99+1 DarkGray/-
26: 0+1 DarkGray/- | 1+22 Gray/- | 99+1 DarkGray/-
27: 0+100 DarkGray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+5 Black/Gray
